--- a/styles.css
+++ b/styles.css
@@ -51,34 +51,37 @@ header {
 .logo-badge {
   display: flex;
   align-items: center;
-  gap: 12px;
+  position: relative;
+  right: 6px;
+  /* top:10px; */
 }
 .logo-circles {
+  z-index: 0;
   width: 64px;
   height: 64px;
-  display: block;
+  display: block;  position: relative;
+    left:48px;
 }
 .logo-circles .circle-left {
   fill: var(--primary);
-  fill-opacity: 0.95;
+  fill-opacity: 0.85;
 }
 .logo-circles .circle-right {
   fill: var(--primary-soft);
-  fill-opacity: 0.95;
+  fill-opacity: 0.85;
 }
 .logo-badge h1 {
+  z-index: 1;
   margin: 0;
   font-family: "Sora", sans-serif;
   font-size: 1.1rem;
   color: var(--text-main);
 }
 
-h1 {
-  font-size: 1.5rem;
-  font-family: "Sora", sans-serif;
-  /* margin-bottom: 20px; */
+.links{
+  display: flex;
+  gap: 10px;
 }
-
 nav a {
   text-decoration: none;
   color: var(--text-main);
@@ -91,7 +94,29 @@ nav a {
 nav a:hover {
   background-color: #0f172a;
   color: var(--text-muted);
+  border-radius: 5px;
+}
+.account{
+  margin: 0 10px;
+}
+.account a {
+  background-color: var(--primary);
+  color: var(--primary-soft);
+  border-radius: 10px;
+  padding: 10px 18px;
+  text-decoration: none; 
+  font-size: var(--fs-small);
+  transition: var(--transition-normal);
+}
+.account a:hover {
+  background-color: #3b54cc;
   transform: scale(1.05);
+}
+.hamburger {
+  display: none;
+  font-size: var(--fs-h3);
+  padding: 20px;
+  cursor: pointer;
 }
 
 .home {
@@ -136,6 +161,59 @@ nav a:hover {
     background-color: #3b54cc;
     transform: scale(1.05);
 }
+.waves {
+  position: relative;
+  height: 120px;
+  line-height: 0;
+  background-color: var(--bg);
+  overflow: hidden;
+  transform: skewY(-2.5deg);
+  transform-origin: left;
+  pointer-events: none;
+}
+
+.waves svg {
+  position: absolute;
+  width: 100%;
+  height: 160px;
+  top: 0;
+  left: 0;
+  box-shadow: var(--shadow);
+}
+
+.wave {
+  animation: wave 6s ease-in-out infinite;
+}
+
+.wave-1 {
+  animation-delay: 0s;
+}
+
+.wave-2 {
+  animation-delay: 1s;
+}
+
+.wave-3 {
+  animation-delay: 2s;
+}
+
+@keyframes wave {
+  0% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(-15px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+
+
+
+
+
 .horizontal-rule {
     border-top: 3px solid var(--text-main);
     margin: 40px 0 0;
